[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.5",
    "numpy>=2.2.4",
    "streamlit-folium>=0.24.0",
    "streamlit>=1.43.2",
    "polyline>=2.0.2",
    "requests>=2.32.3",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
]
